Fixing order merge problems